--- a/roles/postgres_backup_roles/tasks/main.yml
+++ b/roles/postgres_backup_roles/tasks/main.yml
@@ -3,8 +3,8 @@
   ansible.builtin.set_fact:
     sysd_job__service_template: "{{ role_path }}/templates/postgres_backup_roles.service.j2"
     sysd_job__timer_template: "{{ role_path }}/templates/postgres_backup_roles.timer.j2"
-    sysd_job__systemd_dir: "{{ pg_backup_roles_ctx.systemd_dir }}"
-    sysd_job__service: "{{ pg_backup_roles_ctx.service_name }}"
+    sysd_job__systemd_dir: "{{ pg_bu_roles__systemd_dir }}"
+    sysd_job__service: "{{ pg_bu_roles__service }}"
 
 - name: Configure systemd job for postgres role backup
   ansible.builtin.include_role:
