--- a/roles/postgres_backup_database/meta/argument_specs.yml
+++ b/roles/postgres_backup_database/meta/argument_specs.yml
@@ -1,7 +1,7 @@
 ---
 argument_specs:
   main:
-    short_description: Role to configure a systemd service and timer to delete old postgres backup files
+    short_description: Role to configure a systemd service and timer to backup a single postgres database
     options:
       pg_bu_db__systemd_dir:
         type: str
