--- a/roles/postgres_optimize/tasks/main.yml
+++ b/roles/postgres_optimize/tasks/main.yml
@@ -3,8 +3,8 @@
   ansible.builtin.set_fact:
     sysd_job__service_template: "{{ role_path }}/templates/postgres_optimize.service.j2"
     sysd_job__timer_template: "{{ role_path }}/templates/postgres_optimize.timer.j2"
-    sysd_job__systemd_dir: "{{ pg_optimize_ctx.systemd_dir }}"
-    sysd_job__service: "{{ pg_optimize_ctx.service_name }}"
+    sysd_job__systemd_dir: "{{ pg_optimize__systemd_dir }}"
+    sysd_job__service: "{{ pg_optimize__service }}"
 
 - name: Configure systemd job to optimize database
   ansible.builtin.include_role:
