--- a/inventories/host_vars/vmtest2.yml
+++ b/inventories/host_vars/vmtest2.yml
@@ -13,9 +13,5 @@ ddclient_secrets_file: "{{ external_vars_root }}/ddclient_secrets.yml"
 dd__tmp_dir: /home/svc_ddclient
 dd__systemd_dir: /home/svc_ddclient/.config/systemd/user
 dd__namecheap_password: "{{ vault_namecheap_password }}"
-
-ddclient_config:
-  service_account:
-    username: svc_ddclient
-    password: "{{ vault_password_svc_ddclient }}"
-    groups:
+dd__username: svc_ddclient
+dd__password: "{{ vault_password_svc_ddclient }}"
